<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.volleyscorecounter.StartActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <EditText
        android:id="@+id/teamAname"

        android:layout_marginTop="96dp"
        style="@style/EditTextTeamNames"
        android:hint="@string/teamA"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/teamBname"

        android:layout_marginTop="73dp"
        android:hint="@string/teamB"
        style="@style/EditTextTeamNames"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/teamAname" />

    <TextView
        android:id="@+id/teamNames"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:text="@string/Names"
        android:textAlignment="center"
        android:textColor="#7fa87f"
        android:textSize="36sp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/gameBegin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#7fa87f"
        android:padding="16dp"
        android:text="@string/buttonStart"
        android:textColor="#ffffff"
        android:layout_marginTop="19dp"
        app:layout_constraintTop_toBottomOf="@+id/teamBname"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.502" />
</android.support.constraint.ConstraintLayout>


