<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">


    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.example.android.volleyscorecounter.MainActivity"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="81dp">

        <TextView
            android:id="@+id/setsTeamB"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="235dp"
            app:layout_constraintRight_toLeftOf="@+id/pointsTeamB"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/TextViewSets" />

        <TextView
            android:id="@+id/pointsTeamB"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textViewTeamB"
            style="@style/TextViewPoints"/>

        <Button
            android:id="@+id/buttonB"
            android:layout_marginEnd="22dp"
            android:layout_marginRight="16dp"
            app:layout_constraintRight_toRightOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/ButtonPoints"/>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="220dp"
            android:layout_marginLeft="@dimen/margin8dp"
            android:layout_marginRight="@dimen/margin8dp"
            android:scaleType="fitXY"
            android:contentDescription="@string/imgDesc"
            android:src="@drawable/volleycourt"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp" />

        <TextView
            android:id="@+id/textViewTeamB"
            android:layout_marginEnd="28dp"
            android:layout_marginRight="@dimen/margin8dp"
            android:text="@string/teamB"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/TextTeam"/>

        <Button
            android:id="@+id/buttonA"
            android:layout_marginLeft="29dp"
            android:layout_marginStart="29dp"
            app:layout_constraintLeft_toLeftOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/ButtonPoints"/>

        <TextView
            android:id="@+id/textViewTeamA"
            android:layout_marginLeft="@dimen/margin8dp"
            android:layout_marginStart="29dp"
            android:text="@string/teamA"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/TextTeam"/>

        <TextView
            android:id="@+id/pointsTeamA"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="228dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textViewTeamA"
            style="@style/TextViewPoints"/>

        <TextView
            android:id="@+id/setsTeamA"
            style="@style/TextViewSets"
            android:layout_marginLeft="9dp"
            android:layout_marginStart="13dp"
            android:layout_marginTop="235dp"
            app:layout_constraintLeft_toRightOf="@+id/pointsTeamA"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewSet1"
            android:text="@string/set1"
            app:layout_constraintLeft_toLeftOf="@+id/guideline5"
            app:layout_constraintRight_toLeftOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.7"
            style="@style/TextViewSetsAtBottom" />

        <TextView
            android:id="@+id/textViewSet2"
            android:text="@string/set2"
            app:layout_constraintLeft_toLeftOf="@+id/guideline2"
            app:layout_constraintRight_toLeftOf="@+id/guideline3"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.7"
            style="@style/TextViewSetsAtBottom"
            />

        <TextView
            android:id="@+id/textViewSet3"
            android:text="@string/set3"
            app:layout_constraintLeft_toLeftOf="@+id/guideline3"
            app:layout_constraintRight_toLeftOf="@+id/guideline4"
            app:layout_constraintTop_toTopOf="@+id/imageView"
            style="@style/TextViewSetsAtBottom"
            android:layout_marginTop="335dp" />

        <TextView
            android:id="@+id/textViewSet4"
            android:text="@string/set4"
            app:layout_constraintLeft_toLeftOf="@+id/guideline4"
            app:layout_constraintRight_toLeftOf="@+id/guideline6"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.7"
            style="@style/TextViewSetsAtBottom"/>

        <TextView
            android:id="@+id/textViewSet5"
            android:text="@string/set5"
            app:layout_constraintLeft_toLeftOf="@+id/guideline6"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.7"
            style="@style/TextViewSetsAtBottom"/>

        <android.support.constraint.Guideline
            android:id="@+id/guideline2"
            style="@style/constraint"
            app:layout_constraintGuide_percent="0.2" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline3"
            style="@style/constraint"
            app:layout_constraintGuide_percent="0.4" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline4"
            android:layout_marginLeft="28dp"
            style="@style/constraint"
            app:layout_constraintGuide_percent="0.6" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline5"
            style="@style/constraint"
            app:layout_constraintGuide_percent="0.0" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline6"
            android:layout_marginTop="350dp"
            style="@style/constraint"
            app:layout_constraintGuide_percent="0.8" />

        <TextView
            android:id="@+id/set1Score"
            style="@style/TextViewScoreAtBottom"
            app:layout_constraintHorizontal_bias="0.68"
            app:layout_constraintLeft_toLeftOf="@+id/guideline5"
            app:layout_constraintRight_toLeftOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/textViewSet1"
            android:layout_marginTop="@dimen/margin8dp" />

        <TextView
            android:id="@+id/set2Score"
            style="@style/TextViewScoreAtBottom"
            app:layout_constraintHorizontal_bias="0.65"
            app:layout_constraintLeft_toLeftOf="@+id/guideline2"
            app:layout_constraintRight_toLeftOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/textViewSet2"
            android:layout_marginTop="@dimen/margin8dp" />

        <TextView
            android:id="@+id/set3Score"
            style="@style/TextViewScoreAtBottom"
            app:layout_constraintLeft_toLeftOf="@+id/guideline3"
            app:layout_constraintRight_toLeftOf="@+id/guideline4"
            app:layout_constraintTop_toBottomOf="@+id/textViewSet3"
            android:layout_marginTop="@dimen/margin8dp" />

        <TextView
            android:id="@+id/set4Score"
            style="@style/TextViewScoreAtBottom"
            app:layout_constraintHorizontal_bias="0.64"
            app:layout_constraintLeft_toLeftOf="@+id/guideline4"
            app:layout_constraintRight_toLeftOf="@+id/guideline6"
            app:layout_constraintTop_toBottomOf="@+id/textViewSet4"
            android:layout_marginTop="@dimen/margin8dp" />

        <TextView
            android:id="@+id/set5Score"
            style="@style/TextViewScoreAtBottom"
            app:layout_constraintHorizontal_bias="0.666"
            app:layout_constraintLeft_toLeftOf="@+id/guideline6"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewSet5"
            android:layout_marginTop="@dimen/margin8dp" />

        <Button
            android:id="@+id/buttonReset"
            style="@android:style/Widget.Holo.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="24dp"
            android:background="#7fa87f"
            android:text="@string/resetAll"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:textColor="#ffffff"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/set3Score"
            app:layout_constraintVertical_bias="0.272" />
    </android.support.constraint.ConstraintLayout>
</ScrollView>